Minor tweaks and comments

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -64,7 +64,7 @@ shock:
 
 debug:
 {
-	enabled = true;
+	enabled = false;
 	print_endowments = false;
 	print_intermediate_output = true;
 	intermediate_output_print_period = 10000;
