BREAKING CHANGE - refactor to vectors from arrays
Currently broken, thus the branching - I am moving some key arrays to
vectors so that they can be dynamically sized at runtime, allowing
NumberOfAgents and NumberOfCommodities to be passed as runtime
parameters. I have already fixed the crucial CommodityArray typedef; I
still need to fix the Data object, which seems to require some changes
throughout the code.  Note also that this refactor has caused the
compiler to throw a number of warnings about implicit conversions - this
makes me realize that most of the ints in the model should probably
unsigned ints. This is probably not too much trouble but still needs to
be dealt with in some way, the sheer number of warnings is distracting
and I don't want to disable -Wsign-conversion.

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -9,27 +9,35 @@ rand:
 	seed= 42;	
 }
 
-/*
+// Scaling parameters for the model.
+// number.agents = Number of agents used in the model population.
+// number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 100000; 
+#	agents = 100000; 
 	commodities = 2; 
 };
-*/
 
+// Number of pairwise interactions per model turn.
+// A reasonable value would be number.agents divided by two.
 interactions_per_period = 50; // could be numagents/2
 
+// Alpha values are randomly generated throuhgout the model; 
+// these parameters govern the range of the uniform distribution used.
 alpha:
 {
 	min = 0.01;
 	max = 0.99;
 };
+
+// Determine the range of initial agent endowments.
 wealth:
 {
 	min = 50;
 	max = 150;
 }
 
+// Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
 	disabled = true;
@@ -37,7 +45,9 @@ parallel:
 	agents_to_randomize = 10000; //numagents/10
 }
 
+// How many equilibrations should be performed in the model run?
 num_equilibrations = 1;
+// If num_equilibrations > 1, are conditions reset before the next equilibration?
 same_conditions_each_equilibration = false;
 
 trade:
@@ -64,7 +74,7 @@ shock:
 
 debug:
 {
-	enabled = false;
+	enabled = true;
 	print_endowments = false;
 	print_intermediate_output = true;
 	intermediate_output_print_period = 10000;
