refacored NumberOfAgents, size_ts everywhere

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -14,7 +14,7 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-#	agents = 100000; 
+	agents = 100000; 
 	commodities = 2; 
 };
 
