--- a/parameters.cfg
+++ b/parameters.cfg
@@ -41,12 +41,14 @@ wealth:
 parallel:
 {
 	disabled = true;
-	randomization_method = 0; 
-	agents_to_randomize = 10000; //numagents/10
+	randomization_method = 0; 	// 0 means swap pairs
+								// 1 means "threaded"
+	agents_to_randomize = 10000; 	// Example value: numagents/10
 }
 
 // How many equilibrations should be performed in the model run?
 num_equilibrations = 1;
+
 // If num_equilibrations > 1, are conditions reset before the next equilibration?
 same_conditions_each_equilibration = false;
 
@@ -57,11 +59,31 @@ trade:
 
 termination: 
 {
+	// termination.criterion specifies the termination condition of the model.
+	// -2 means termination based on time
+	// -1 means use L2 norm on MRSs
+	//  0 means use L∞ norm on MRSs
+	//  1 means use relative increase in V
+	//  2 means use absolute increase in V
 	criterion = -1;  
-	time = 20000L;
+	time = 20000L; // must end in L (long)
 	eps = 0.01;
-	threshold = 100000L;	
+	threshold = 100000L; //must end in L (long)
 	period = 10000;
+	//  From RobL
+	//  Typical values:
+	//  A = 100,        N = 10,     use 1
+	//  A = 100,        N = 50,     use 25
+	//  A = 100,        N = 100,    use 100
+	//  A = 100,        N = 500,    use 2500
+	//  A = 100,        N = 1000,   use 10,000
+	//  A = 100,        N = 5000,   use 250,000
+	//  A = 100,        N = 10,000, use 1,000,000
+	//  A = 1000,       N = 2,      use 1
+	//  A = 10,000,     N = 2,      use 10
+	//  A = 100,000,    N = 2,      use 100
+	//  A = 1,000,000,  N = 2,      use 1000
+	//  A = 10,000,000, N = 2,      use 10,000
 }
 
 shock:
@@ -74,7 +96,7 @@ shock:
 
 debug:
 {
-	enabled = true;
+	enabled = false; // enable LOG(DEBUG) in addition to LOG(INFO)
 	print_endowments = false;
 	print_intermediate_output = true;
 	intermediate_output_print_period = 10000;
