Added some useful comments

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -5,7 +5,7 @@
 // Model seeding: random or fixed seed?
 rand:
 {
-	use_seed = false;
+	use_seed = true;
 	seed= 42;	
 }
 
@@ -24,6 +24,7 @@ interactions_per_period = 50; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
+// Note: These are uniformly distributed Cobb-Douglas preferences
 alpha:
 {
 	min = 0.01;
@@ -98,7 +99,7 @@ debug:
 {
 	enabled = false; // enable LOG(DEBUG) in addition to LOG(INFO)
 	print_endowments = false;
-	print_intermediate_output = true;
+	print_intermediate_output = tru;
 	intermediate_output_print_period = 10000;
 	print_convergence_stats = true;
 	print_final_commodity_list = false;
