Fix typo in parameters.cfg

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -6,7 +6,7 @@
 rand:
 {
 	use_seed = true;
-	seed= 42;	
+	seed = 42;	
 }
 
 // Scaling parameters for the model.
@@ -29,7 +29,7 @@ alpha:
 {
 	min = 0.01;
 	max = 0.99;
-};
+}
 
 // Determine the range of initial agent endowments.
 wealth:
@@ -99,7 +99,7 @@ debug:
 {
 	enabled = false; // enable LOG(DEBUG) in addition to LOG(INFO)
 	print_endowments = false;
-	print_intermediate_output = tru;
+	print_intermediate_output = true;
 	intermediate_output_print_period = 10000;
 	print_convergence_stats = true;
 	print_final_commodity_list = false;
