Framework for adding activation regimes
This commit begins the process of adding activation regimes.  There is
now a parameter option, activation.method, that specifies the regime.
(The parallel options in parameters.cfg will probably now be deprecated.)
For now only random and uniform activation have been added (options 0
and 1). I intend next to add fixed activation, which should be trivial
to implement but pointless to use (potentially useful pedagogical
example, though). This parameter should probably be turned into an enum,
but I don't know how nicely that will play with gflags...

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -14,13 +14,13 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 100000; 
-	commodities = 2; 
+	agents = 1000000; 
+	commodities = 3; 
 };
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 50; // could be numagents/2
+interactions_per_period = 500000; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
@@ -38,6 +38,13 @@ wealth:
 	max = 150;
 }
 
+activation:
+{
+	method = 1;
+	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
+	// 0 = serial, random unfair
+	// 1 = serial, random fair (uniform)
+}
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
@@ -67,10 +74,10 @@ termination:
 	//  1 means use relative increase in V
 	//  2 means use absolute increase in V
 	criterion = -1;  
-	time = 20000L; // must end in L (long)
+	time = 200L; // must end in L (long)
 	eps = 0.01;
-	threshold = 100000L; //must end in L (long)
-	period = 10000;
+	threshold = 100L; //must end in L (long)
+	period = 10;
 	//  From RobL
 	//  Typical values:
 	//  A = 100,        N = 10,     use 1
@@ -100,7 +107,7 @@ debug:
 	enabled = false; // enable LOG(DEBUG) in addition to LOG(INFO)
 	print_endowments = false;
 	print_intermediate_output = true;
-	intermediate_output_print_period = 10000;
+	intermediate_output_print_period = 10;
 	print_convergence_stats = true;
 	print_final_commodity_list = false;
 }
