Thread-local random numbers
Primary change: restructured the program so that there is (once again)
an RNG class. It now uses thread-local storage to hold the appropriate
generators. I added the class so that I can consider replacing this
thread-local approach with Sitmo, should I need increased
reproducibility.

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -14,13 +14,13 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 1000000; 
+	agents = 100000; 
 	commodities = 2; 
 };
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 500000; // could be numagents/2
+interactions_per_period = 50000; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
@@ -104,10 +104,17 @@ shock:
 
 debug:
 {
-	enabled = false; // enable LOG(DEBUG) in addition to LOG(INFO)
+	enabled = true; // enable LOG(DEBUG) in addition to LOG(INFO)
 	print_endowments = false;
 	print_intermediate_output = true;
-	intermediate_output_print_period = 10;
+	intermediate_output_print_period = 1;
 	print_convergence_stats = true;
 	print_final_commodity_list = false;
+}
+
+file:
+{
+	write_to_file = true; // write model outputs to file for analysis
+	filename = "data.csv";  // NYI
+	append = false; 
 }
