Parallel without mutex
Added a simple approach to parallelizing. Barely implemented yet, no
mutexes, produces nonsensical behavior.  Moving development to an
experimental branch in case this doesn't pan out.

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -48,10 +48,11 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = true;
-	randomization_method = 0; 	// 0 means swap pairs
-								// 1 means "threaded"
-	agents_to_randomize = 10000; 	// Example value: numagents/10
+	disabled = false;
+	number_of_threads = 100;
+//	randomization_method = 0; 	// 0 means swap pairs
+//								// 1 means "threaded"
+//	agents_to_randomize = 10000; 	// Example value: numagents/10
 }
 
 // How many equilibrations should be performed in the model run?
