Initial parallelization, Poisson bugfix
In order of importance:
1. Fixed activation method #2 (Poisson - furthest from mean)
2. Added an initial parallelization attempt (real parallelization, not
fork-and-join, but also not very good)
3. Made the runscripts go to 25 instead of 24 runs
4. Tweaked various bits of code, etc.

--- a/parallel-activation-suite/parameters-2.cfg
+++ b/parallel-activation-suite/parameters-2.cfg
@@ -48,7 +48,7 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = true;
+	disabled = false;
 	number_of_threads = 4;
 }
 
