--- a/parallel-activation-suite/parameters-4.cfg
+++ b/parallel-activation-suite/parameters-4.cfg
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 2;
+	method = 4;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -48,7 +48,7 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = true;
+	disabled = false;
 	number_of_threads = 4;
 }
 
