--- a/parameters.cfg
+++ b/parameters.cfg
@@ -5,7 +5,7 @@
 // Model seeding: random or fixed seed?
 rand:
 {
-	use_seed = true;
+	use_seed = false;
 	seed = 42;
 }
 
@@ -15,7 +15,7 @@ rand:
 number:
 {
 	agents = 100000; 
-	commodities = 2; 
+	commodities = 10; 
 };
 
 // Number of pairwise interactions per model turn.
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 3;
+	method = 0;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -48,8 +48,8 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = false;
-	number_of_threads = 100;
+	disabled = true;
+	number_of_threads = 4;
 //	randomization_method = 0; 	// 0 means swap pairs
 //								// 1 means "threaded"
 //	agents_to_randomize = 10000; 	// Example value: numagents/10
