--- a/serial-activation-suite/parameters-0.cfg
+++ b/serial-activation-suite/parameters-0.cfg
@@ -49,9 +49,7 @@ activation:
 parallel:
 {
 	disabled = true;
-	randomization_method = 0; 	// 0 means swap pairs
-								// 1 means "threaded"
-	agents_to_randomize = 10000; 	// Example value: numagents/10
+	number_of_threads = 4;
 }
 
 // How many equilibrations should be performed in the model run?
