Think that fixes fork-and-join

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -48,8 +48,10 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = true;
-	number_of_threads = 4;
+	disabled = false;
+	fork_and_join = true;
+	number_of_threads = 250;
+	shuffle_after_join = true;
 }
 
 // How many equilibrations should be performed in the model run?
