--- a/parameters.cfg
+++ b/parameters.cfg
@@ -50,7 +50,7 @@ parallel:
 {
 	disabled = false;
 	fork_and_join = true;
-	number_of_threads = 250;
+	number_of_threads = 4;
 	shuffle_after_join = true;
 }
 
@@ -110,6 +110,7 @@ debug:
 	intermediate_output_print_period = 1;
 	print_convergence_stats = true;
 	print_final_commodity_list = false;
+	dump_agent_information = true;
 }
 
 file:
