--- a/parameters.cfg
+++ b/parameters.cfg
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 0;
+	method = 1;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -48,8 +48,8 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = false;
-	fork_and_join = true;
+	disabled = true;
+	fork_and_join = false;
 	number_of_threads = 4;
 	shuffle_after_join = true;
 }
@@ -110,7 +110,7 @@ debug:
 	intermediate_output_print_period = 1;
 	print_convergence_stats = true;
 	print_final_commodity_list = false;
-	dump_agent_information = true;
+	dump_agent_information = false;
 }
 
 file:
