Fixed bug in initialMRSes

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -14,13 +14,13 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 10000; 
-	commodities = 2; 
+	agents = 100000; 
+	commodities = 4; 
 };
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 5000; // could be numagents/2
+interactions_per_period = 50000; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 1;
+	method = 4;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -48,7 +48,7 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = true;
+	disabled = false;
 	fork_and_join = false;
 	number_of_threads = 4;
 	shuffle_after_join = true;
