--- a/serial-activation-suite/parameters-0.cfg
+++ b/serial-activation-suite/parameters-0.cfg
@@ -14,13 +14,13 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 10000000; 
+	agents = 1000000; 
 	commodities = 10; 
 };
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 5000000; // could be numagents/2
+interactions_per_period = 500000; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
