Fix missing agent dump capability for regular equilibrate

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -15,7 +15,7 @@ rand:
 number:
 {
 	agents = 100000; 
-	commodities = 4; 
+	commodities = 10; 
 };
 
 // Number of pairwise interactions per model turn.
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 4;
+	method = -1;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -110,7 +110,7 @@ debug:
 	intermediate_output_print_period = 1;
 	print_convergence_stats = true;
 	print_final_commodity_list = false;
-	dump_agent_information = false;
+	dump_agent_information = true;
 }
 
 file:
