Tweak mutex and batch scripts

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -5,7 +5,7 @@
 // Model seeding: random or fixed seed?
 rand:
 {
-	use_seed = false;
+	use_seed = true;
 	seed = 42;
 }
 
@@ -14,13 +14,13 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 100000; 
+	agents = 10000; 
 	commodities = 10; 
 };
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 50000; // could be numagents/2
+interactions_per_period = 5000; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = -1;
+	method = 0;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -49,7 +49,7 @@ activation:
 parallel:
 {
 	disabled = false;
-	fork_and_join = false;
+	fork_and_join = true;
 	number_of_threads = 4;
 	shuffle_after_join = true;
 }
@@ -109,7 +109,7 @@ debug:
 	print_intermediate_output = true;
 	intermediate_output_print_period = 1;
 	print_convergence_stats = true;
-	print_final_commodity_list = false;
+	print_final_commodity_list = true;
 	dump_agent_information = true;
 }
 
