--- a/parameters.cfg
+++ b/parameters.cfg
@@ -14,13 +14,13 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 10000; 
+	agents = 100000; 
 	commodities = 10; 
 };
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 5000; // could be numagents/2
+interactions_per_period = 50000; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
@@ -44,13 +44,18 @@ activation:
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
+	// 2 = Poisson-Extreme (DO NOT USE - buggy)
+	// 3 = Poisson-Poor
+	// 4 = Poisson-Rich
+	// 5 = Poisson-Middle
+	// 2-5 are NYI for fork-and-join
 }
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = false;
+	disabled = true;
 	fork_and_join = true;
-	number_of_threads = 4;
+	number_of_threads = 2500;
 	shuffle_after_join = true;
 }
 
@@ -78,20 +83,6 @@ termination:
 	eps = 0.01;
 	threshold = 90L; //must end in L (long)
 	period = 10;
-	//  From RobL
-	//  Typical values:
-	//  A = 100,        N = 10,     use 1
-	//  A = 100,        N = 50,     use 25
-	//  A = 100,        N = 100,    use 100
-	//  A = 100,        N = 500,    use 2500
-	//  A = 100,        N = 1000,   use 10,000
-	//  A = 100,        N = 5000,   use 250,000
-	//  A = 100,        N = 10,000, use 1,000,000
-	//  A = 1000,       N = 2,      use 1
-	//  A = 10,000,     N = 2,      use 10
-	//  A = 100,000,    N = 2,      use 100
-	//  A = 1,000,000,  N = 2,      use 1000
-	//  A = 10,000,000, N = 2,      use 10,000
 }
 
 shock:
