--- a/parameters.cfg
+++ b/parameters.cfg
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 0;
+	method = 1;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -54,8 +54,8 @@ activation:
 parallel:
 {
 	disabled = true;
-	fork_and_join = true;
-	number_of_threads = 2500;
+	fork_and_join = false;
+	number_of_threads = 8;
 	shuffle_after_join = true;
 }
 
