--- a/parallel-activation-suite/parameters-2.cfg
+++ b/parallel-activation-suite/parameters-2.cfg
@@ -44,12 +44,19 @@ activation:
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
+	// 2 = Poisson-Extreme (DO NOT USE - buggy)
+	// 3 = Poisson-Poor
+	// 4 = Poisson-Rich
+	// 5 = Poisson-Middle
+	// 2-5 are NYI for fork-and-join
 }
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
 	disabled = false;
-	number_of_threads = 4;
+	fork_and_join = false;
+	number_of_threads = 0; // 0 = system default
+	shuffle_after_join = true;
 }
 
 // How many equilibrations should be performed in the model run?
@@ -76,20 +83,6 @@ termination:
 	eps = 0.01;
 	threshold = 90L; //must end in L (long)
 	period = 10;
-	//  From RobL
-	//  Typical values:
-	//  A = 100,        N = 10,     use 1
-	//  A = 100,        N = 50,     use 25
-	//  A = 100,        N = 100,    use 100
-	//  A = 100,        N = 500,    use 2500
-	//  A = 100,        N = 1000,   use 10,000
-	//  A = 100,        N = 5000,   use 250,000
-	//  A = 100,        N = 10,000, use 1,000,000
-	//  A = 1000,       N = 2,      use 1
-	//  A = 10,000,     N = 2,      use 10
-	//  A = 100,000,    N = 2,      use 100
-	//  A = 1,000,000,  N = 2,      use 1000
-	//  A = 10,000,000, N = 2,      use 10,000
 }
 
 shock:
@@ -107,12 +100,13 @@ debug:
 	print_intermediate_output = true;
 	intermediate_output_print_period = 1;
 	print_convergence_stats = true;
-	print_final_commodity_list = false;
+	print_final_commodity_list = true;
+	dump_agent_information = true;
 }
 
 file:
 {
 	write_to_file = true; // write model outputs to file for analysis
 	filename = "data.csv";  // NYI
-	append = true; 
+	append = false; 
 }
