--- a/parameters.cfg
+++ b/parameters.cfg
@@ -5,7 +5,7 @@
 // Model seeding: random or fixed seed?
 rand:
 {
-	use_seed = true;
+	use_seed = false;
 	seed = 42;
 }
 
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 1;
+	method = 0;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -53,9 +53,9 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = true;
+	disabled = false;
 	fork_and_join = false;
-	number_of_threads = 8;
+	number_of_threads = 0; // 0 = system default
 	shuffle_after_join = true;
 }
 
