Fixed TBB forkjoin

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -54,9 +54,9 @@ activation:
 parallel:
 {
 	disabled = false;
-	fork_and_join = false;
-	number_of_threads = 0; // 0 = system default
-	shuffle_after_join = true;
+	fork_and_join = true;
+	number_of_threads = 1000; // 0 = system default
+	shuffle_after_join = false;
 }
 
 // How many equilibrations should be performed in the model run?
