--- a/forkjoin-activation-suite/parameters-2.cfg
+++ b/forkjoin-activation-suite/parameters-2.cfg
@@ -40,7 +40,7 @@ wealth:
 
 activation:
 {
-	method = 2;
+	method = 0;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
 	// 0 = serial, random unfair
 	// 1 = serial, random fair (uniform)
@@ -49,9 +49,9 @@ activation:
 parallel:
 {
 	disabled = false;
-	number_of_threads = 4;
+	number_of_threads = 0;
 	fork_and_join = true;
-	shuffle_after_join = false;
+	shuffle_after_join = true;
 }
 
 // How many equilibrations should be performed in the model run?
