--- a/parallel-activation-suite/parameters-0.cfg
+++ b/parallel-activation-suite/parameters-0.cfg
@@ -108,5 +108,5 @@ file:
 {
 	write_to_file = true; // write model outputs to file for analysis
 	filename = "data.csv";  // NYI
-	append = false; 
+	append = true; 
 }
