--- a/parameters.cfg
+++ b/parameters.cfg
@@ -14,13 +14,13 @@ rand:
 // number.commodities = Number of commodities exchanged.
 number:
 {
-	agents = 100000; 
+	agents = 10000; 
 	commodities = 10; 
 };
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 50000; // could be numagents/2
+interactions_per_period = 5000; // could be numagents/2
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
@@ -53,7 +53,7 @@ activation:
 // Enable parallel activation. TODO: Add parallel activation.
 parallel:
 {
-	disabled = false;
+	disabled = true;
 	fork_and_join = true;
 	number_of_threads = 1000; // 0 = system default
 	shuffle_after_join = false;
