Expand documentation in parameters.cfg

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -20,7 +20,7 @@ number:
 
 // Number of pairwise interactions per model turn.
 // A reasonable value would be number.agents divided by two.
-interactions_per_period = 5000; // could be numagents/2
+interactions_per_period = 5000;
 
 // Alpha values are randomly generated throuhgout the model; 
 // these parameters govern the range of the uniform distribution used.
@@ -42,21 +42,22 @@ activation:
 {
 	method = 0;
 	//-1 = serial, fixed fair (WARNING: Just for demonstration, do not use)
-	// 0 = serial, random unfair
-	// 1 = serial, random fair (uniform)
-	// 2 = Poisson-Extreme (DO NOT USE - buggy)
+	// 0 = random unfair (random)
+	// 1 = random fair (uniform)
+	// 2 = Poisson-Middle (DO NOT USE - buggy)
 	// 3 = Poisson-Poor
 	// 4 = Poisson-Rich
-	// 5 = Poisson-Middle
+	// 5 = Poisson-Extreme
 	// 2-5 are NYI for fork-and-join
 }
-// Enable parallel activation. TODO: Add parallel activation.
+
+// Paralellization of model.
 parallel:
 {
 	disabled = true;
 	fork_and_join = true;
 	number_of_threads = 1000; // 0 = system default
-	shuffle_after_join = false;
+	shuffle_after_join = false; // fork-and-join only
 }
 
 // How many equilibrations should be performed in the model run?
@@ -65,6 +66,8 @@ num_equilibrations = 1;
 // If num_equilibrations > 1, are conditions reset before the next equilibration?
 same_conditions_each_equilibration = false;
 
+// Trade epsilon parameter. Trade only occurs if expected gain from trade
+// is greater than exp(eps).
 trade:
 {
 	eps = 0.01;
